Fix Variants tab “Add variants” fieldset for UFRs. Right align all number values in Variants tables.

--- a/src/app/components/programming/program-request/variants-tab/variants-tab.component.scss
+++ b/src/app/components/programming/program-request/variants-tab/variants-tab.component.scss
@@ -18,11 +18,14 @@ fieldset {
 }
 
 .add-variant-table {
+  margin: 0;
+  padding: 0;
+  
   td:first-child {
-    padding-left: 0;
+    padding: 0 10px 0 0;
   }
   td {
-    padding: 0 10px;
+    padding: 0 5px 0 0;
   }
 }
 
